Zoom Installation and Configuration
Playbooks are added to install zoom and configure it to run in a
sandbox.

--- a/install.yml
+++ b/install.yml
@@ -14,5 +14,6 @@
 - import_playbook: "install.sass.yml"
 - import_playbook: "install.arduino.yml"
 - import_playbook: "install.netbeans.yml"
+- import_playbook: "install.zoom.yml"
 
 
