--- a/account.yml
+++ b/account.yml
@@ -10,5 +10,6 @@
 - import_playbook: "account.mysql.yml"
 - import_playbook: "account.postgresql.yml"
 - import_playbook: "account.steam.yml"
+- import_playbook: "account.zoom.yml"
 
 
