Skype Installation and Configuration
Playbooks are added to install skype and configure it to run in a
sandbox.

--- a/account.yml
+++ b/account.yml
@@ -9,6 +9,7 @@
 - import_playbook: "account.server.yml"
 - import_playbook: "account.mysql.yml"
 - import_playbook: "account.postgresql.yml"
+- import_playbook: "account.skype.yml"
 - import_playbook: "account.steam.yml"
 - import_playbook: "account.zoom.yml"
 
