--- a/install.yml
+++ b/install.yml
@@ -12,6 +12,7 @@
 - import_playbook: "install.php.yml"
 - import_playbook: "install.python.yml"
 - import_playbook: "install.sass.yml"
+- import_playbook: "install.skype.yml"
 - import_playbook: "install.arduino.yml"
 - import_playbook: "install.netbeans.yml"
 - import_playbook: "install.zoom.yml"
