--- a/account.yml
+++ b/account.yml
@@ -1,14 +1,16 @@
 
 
+- import_playbook: "account.baidunetdisk.yml"
 - import_playbook: "account.bumblebee.yml"
-- import_playbook: "account.config.yml"
 - import_playbook: "account.common.yml"
+- import_playbook: "account.config.yml"
+- import_playbook: "account.conky.yml"
 - import_playbook: "account.docker.yml"
 - import_playbook: "account.firefox.yml"
 - import_playbook: "account.geeqie.yml"
-- import_playbook: "account.server.yml"
 - import_playbook: "account.mysql.yml"
 - import_playbook: "account.postgresql.yml"
+- import_playbook: "account.server.yml"
 - import_playbook: "account.skype.yml"
 - import_playbook: "account.steam.yml"
 - import_playbook: "account.zoom.yml"
