--- a/install.yml
+++ b/install.yml
@@ -1,20 +1,25 @@
 
 
-- import_playbook: "install.system.yml"
+- import_playbook: "install.arduino.yml"
+- import_playbook: "install.baidunetdisk.yml"
+- import_playbook: "install.conky.yml"
 - import_playbook: "install.console.yml"
 - import_playbook: "install.desktop.yml"
-- import_playbook: "install.qemu.yml"
-- import_playbook: "install.looking_glass.yml"
-- import_playbook: "install.piper.yml"
+- import_playbook: "install.emscripten.yml"
 - import_playbook: "install.golang.yml"
 - import_playbook: "install.java.yml"
+- import_playbook: "install.looking_glass.yml"
+- import_playbook: "install.netbeans.yml"
 - import_playbook: "install.node.yml"
 - import_playbook: "install.php.yml"
+- import_playbook: "install.piper.yml"
 - import_playbook: "install.python.yml"
+- import_playbook: "install.qemu.yml"
 - import_playbook: "install.sass.yml"
+- import_playbook: "install.scream.yml"
 - import_playbook: "install.skype.yml"
-- import_playbook: "install.arduino.yml"
-- import_playbook: "install.netbeans.yml"
+- import_playbook: "install.steam.yml"
+- import_playbook: "install.system.yml"
 - import_playbook: "install.zoom.yml"
 
 
