Playbook for Installing Android Studio
A playbook is created for installing Android Studio 4.2 from Google.

--- a/install.yml
+++ b/install.yml
@@ -1,5 +1,6 @@
 
 
+- import_playbook: "install.android_studio.yml"
 - import_playbook: "install.arduino.yml"
 - import_playbook: "install.baidunetdisk.yml"
 - import_playbook: "install.conky.yml"
