Source Extra Files in $HOME/.profile Script
This commit updates $HOME/.profile script to include other files
(ending with .sh) from $HOME/.profile.d directory.

--- a/account.yml
+++ b/account.yml
@@ -1,6 +1,7 @@
 
 
 - import_playbook: "account.baidunetdisk.yml"
+- import_playbook: "account.bash.yml"
 - import_playbook: "account.bumblebee.yml"
 - import_playbook: "account.common.yml"
 - import_playbook: "account.config.yml"
