--- a/account.yml
+++ b/account.yml
@@ -9,6 +9,7 @@
 - import_playbook: "account.docker.yml"
 - import_playbook: "account.firefox.yml"
 - import_playbook: "account.geeqie.yml"
+- import_playbook: "account.golang.yml"
 - import_playbook: "account.mysql.yml"
 - import_playbook: "account.postgresql.yml"
 - import_playbook: "account.server.yml"
