--- a/hardware.sensor.yml
+++ b/hardware.sensor.yml
@@ -13,6 +13,6 @@
         owner: "root"
         group: "root"
         mode: "0644"
-      when: "hardware_sensor_modules|length > 0"
+      when: "hardware_sensor_modules|default([])|length > 0"
 
 
