Install libarchive-tools Instead of bsdtar
The package bsdtar is renamed to libarchive-tools and the package is
no longer available. The commit fixes the problem.

--- a/install.console.yml
+++ b/install.console.yml
@@ -10,11 +10,11 @@
   vars:
 
     install_console_packages:
-      - { name: "bsdtar" }
       - { name: "curl" }
       - { name: "ffmpeg" }
       - { name: "git" }
       - { name: "htop" }
+      - { name: "libarchive-tools" }
       - { name: "mc" }
       - { name: "net-tools" }
       - { name: "p7zip" }
