--- a/software.dpkg.yml
+++ b/software.dpkg.yml
@@ -7,7 +7,10 @@
   tasks:
 
     - name: "Enable i386 architecture for x86_64 machines"
-      shell: "dpkg --add-architecture i386"
+      lineinfile:
+        path: "/var/lib/dpkg/arch"
+        line: "i386"
+        state: "present"
       when: "ansible_architecture == 'x86_64'"
 
 
