Additional Console Packages Added
The playbook installs additional console software packages to
re-encode file paths, support other archive file formats, etc.

--- a/install.console.yml
+++ b/install.console.yml
@@ -10,13 +10,22 @@
   vars:
 
     install_console_packages:
+      - { name: "bchunk" }
+      - { name: "cabextract" }
+      - { name: "ccd2iso" }
+      - { name: "convmv" }
       - { name: "curl" }
+      - { name: "daa2iso" }
       - { name: "ffmpeg" }
       - { name: "git" }
       - { name: "htop" }
+      - { name: "iat" }
+      - { name: "innoextract" }
       - { name: "libarchive-tools" }
       - { name: "mc" }
+      - { name: "mdf2iso" }
       - { name: "net-tools" }
+      - { name: "nrg2iso" }
       - { name: "p7zip" }
       - { name: "p7zip-full" }
       - { name: "rsync" }
