--- a/install.desktop.yml
+++ b/install.desktop.yml
@@ -10,6 +10,7 @@
   vars:
 
     install_desktop_packages:
+      - { name: "chromium" }
       - { name: "conky" }
       - { name: "fcitx" }
       - { name: "fcitx-table-all" }
@@ -17,28 +18,20 @@
       - { name: "fcitx-table-cangjie5" }
       - { name: "fcitx-table-quick3" }
       - { name: "fcitx-table-quick5" }
-      - { name: "firefox" }
       - { name: "firejail" }
       - { name: "geeqie" }
       - { name: "gimp" }
       - { name: "gtk2-engines-oxygen" }
+      - { name: "gtk3-engines-breeze" }
       - { name: "keepassx" }
-      - { name: "steam" }
+      - { name: "qbittorrent" }
       - { name: "skanlite" }
+      - { name: "steam" }
       - { name: "tlp" }
       - { name: "vlc" }
       - { name: "wmctrl" }
       - { name: "xdotool" }
       - { name: "xpra" }
-      - { name: "chromium", requires: { distribution: "debian" } }
-      - { name: "flashplugin-nonfree", requires: { distribution: "debian" } }
-      - { name: "gtk3-engines-oxygen", requires: { distribution: "debian" } }
-      - { name: "wine", requires: { distribution: "debian" } }
-      - { name: "wine32", requires: { distribution: "debian" } }
-      - { name: "chromium-browser", requires: { distribution: "ubuntu" } }
-      - { name: "flashplugin-installer", requires: { distribution: "ubuntu" } }
-      - { name: "gtk3-engines-breeze", requires: { distribution: "ubuntu" } }
-      - { name: "wine-stable", requires: { distribution: "ubuntu", since: "zesty" } }
 
   tasks:
 
