--- a/software.firejail.yml
+++ b/software.firejail.yml
@@ -34,8 +34,8 @@
           template:
             dest: "{{ item.path }}"
             src: "{{ playbook_dir }}/files/{{ item.path }}.j2"
-            owner: "kmchan"
-            group: "kmchan"
+            owner: "{{ item.owner|default('root') }}"
+            group: "{{ item.group|default('root') }}"
             mode: "{{ item.mode|default('0644') }}"
           loop:
             - { path: "/etc/firejail/internet_only.net" }
