--- a/service.yml
+++ b/service.yml
@@ -5,6 +5,7 @@
 - import_playbook: "service.certbot.yml"
 - import_playbook: "service.ddclient.yml"
 - import_playbook: "service.docker.yml"
+- import_playbook: "service.guest.yml"
 - import_playbook: "service.mysql.yml"
 - import_playbook: "service.php_fpm.yml"
 - import_playbook: "service.postgresql.yml"
