Skype Firejail Profile Update
The default firejail profile for Skype does not work. The problem
is that Skype is installed into /usr/share/skypeforlinux, but that
location is not executable due to the AppArmor setting. The commit
fixes the problem by whitelisting the directory in the AppArmor
settings.

Also, unprivileged usernamespace is supported on Debian, so we enable
the relevant part in the generic Electron profile.

--- a/install.skype.yml
+++ b/install.skype.yml
@@ -21,4 +21,18 @@
             update_cache: true
             cache_valid_time: 86400
 
+        - name: "Install Skype: Install Custom Profile Modification for Electron Apps"
+          template:
+            dest: "/etc/firejail/electron.local"
+            src: "{{ playbook_dir }}/files/etc/firejail/electron.local.j2"
+            owner: "root"
+            group: "root"
+            mode: "0644"
+
+        - name: "Install Skype: Install Custom AppArmor Rule for Firejail"
+          lineinfile:
+            path: "/etc/apparmor.d/local/firejail-default"
+            line: "/{,run/firejail/mnt/oroot/}usr/share/skypeforlinux/** ix,"
+            state: "present"
+
 
