--- a/software.firejail.yml
+++ b/software.firejail.yml
@@ -22,6 +22,7 @@
             default_release: "{{ item.release|default(ansible_distribution_release) }}"
           loop:
             - { name: "firejail" }
+            - { name: "dnsmasq" }
 
         - name: "Setup Firejail: Enable Networking Options"
           lineinfile:
@@ -38,11 +39,22 @@
             group: "{{ item.group|default('root') }}"
             mode: "{{ item.mode|default('0644') }}"
           loop:
-            - { path: "/etc/firejail/internet_only.net" }
-            - { path: "/etc/firejail/local_only.net" }
-            - { path: "/etc/firejail/unrestricted.net" }
+            - { path: "/etc/dnsmasq.d/firejail.conf" }
+            - { path: "/etc/firejail/allow-connection-to-anywhere.inc" }
+            - { path: "/etc/firejail/allow-connection-to-anywhere.net" }
+            - { path: "/etc/firejail/allow-connection-to-internet.inc" }
+            - { path: "/etc/firejail/allow-connection-to-internet.net" }
+            - { path: "/etc/firejail/allow-connection-to-lan.inc" }
+            - { path: "/etc/firejail/allow-connection-to-lan.net" }
+            - { path: "/etc/firejail/isolate-networking-with-no-ip.inc" }
+            - { path: "/etc/firejail/isolate-networking-with-random-ip.inc" }
             - { path: "/etc/network/interfaces.d/firejail" }
             - { path: "/etc/nftables/firejail.nft" }
             - { path: "/etc/sysctl.d/99-firejail-options.conf" }
+
+        - name: "Setup Guest Service: Enable Dnsmasq Service"
+          service:
+            name: "dnsmasq.service"
+            enabled: true
 
 
