Update Account Specific Skype Settings
The commit makes some changes to account specific skype settings.
First of all, the desktop file is now generated from the system
desktop file using the firefox_xdg_desktop_file module. Then,
the firejail profile is customized to enable access to some part
of the "Downloads" folder. Lastly, the firejail profile is
customized to allow internet access but not other systems in the
local area network.

--- a/account.skype.yml
+++ b/account.skype.yml
@@ -10,14 +10,21 @@
       when: "account_skype_enabled|default(false)"
       block:
 
-        - name: "Applying Skype Settings to Account: Copying Configuration Files"
-          copy:
-            dest: "/home/kmchan/{{ item.path }}"
-            src: "{{ playbook_dir }}/files/home/kmchan/{{ item.path }}"
+        - name: "Applying Skype Settings to Account: Install Desktop File"
+          firejail_xdg_desktop_file:
+            dest: "/home/kmchan/.local/share/applications/skypeforlinux.desktop"
+            src: "/usr/share/applications/skypeforlinux.desktop"
+            parameters: "--profile=skypeforlinux"
             owner: "kmchan"
             group: "kmchan"
-            mode: "{{ item.mode }}"
-          loop:
-            - { path: ".local/share/applications/skypeforlinux.desktop", mode: "0644" }
+            mode: "0644"
+
+        - name: "Applying Skype Settings to Account: Install Local Firejail Customizations"
+          template:
+            dest: "/home/kmchan/.config/firejail/skypeforlinux.profile"
+            src: "{{ playbook_dir }}/files/home/kmchan/.config/firejail/skypeforlinux.profile.j2"
+            owner: "kmchan"
+            group: "kmchan"
+            mode: "0644"
 
 
