Update Account Specific Baidu Net Disk Settings
The commit makes some changes to account specific baidu net disk
settings. First of all, the desktop file is now generated from
the system desktop file using the firefox_xdg_desktop_file module.
Then, the firejail profile is modified to rely on global profile.
Moreover, the firejail profile is customized to enable access to
some part of the "Downloads" folder. Finally, the firejail profile
is customized to allow internet access but not other systems in the
local area network.

--- a/account.baidunetdisk.yml
+++ b/account.baidunetdisk.yml
@@ -6,18 +6,25 @@
 
   tasks:
 
-    - name: "Applying Steam Settings to Account"
+    - name: "Applying Baidu Net Disk Settings to Account"
       when: "account_baidunetdisk_enabled|default(false)"
       block:
 
-        - name: "Applying Baidu Net Disk Settings to Account: Copying Configuration Files"
-          copy:
-            dest: "/home/kmchan/{{ item.path }}"
-            src: "{{ playbook_dir }}/files/home/kmchan/{{ item.path }}"
+        - name: "Applying Baidu Net Disk Settings to Account: Install Desktop File"
+          firejail_xdg_desktop_file:
+            dest: "/home/kmchan/.local/share/applications/baidunetdisk.desktop"
+            src: "/usr/share/applications/baidunetdisk.desktop"
+            parameters: "--profile=baidunetdisk"
             owner: "kmchan"
             group: "kmchan"
-            mode: "{{ item.mode }}"
-          loop:
-            - { topic: "steam",  path: ".local/share/applications/baidunetdisk.desktop", mode: "0644" }
-            - { topic: "steam",  path: ".config/firejail/baidunetdisk.profile", mode: "0644" }
+            mode: "0644"
+
+        - name: "Applying Baidu Net Disk Settings to Account: Install Local Firejail Customizations"
+          template:
+            dest: "/home/kmchan/.config/firejail/baidunetdisk.profile"
+            src: "{{ playbook_dir }}/files/home/kmchan/.config/firejail/baidunetdisk.profile.j2"
+            owner: "kmchan"
+            group: "kmchan"
+            mode: "0644"
+
 
