--- a/account.steam.yml
+++ b/account.steam.yml
@@ -10,15 +10,21 @@
       when: "account_steam_enabled|default(false)"
       block:
 
-        - name: "Applying Steam Settings to Account: Copying Configuration Files"
-          copy:
-            dest: "/home/kmchan/{{ item.path }}"
-            src: "{{ playbook_dir }}/files/home/kmchan/{{ item.path }}"
+        - name: "Applying Steam Settings to Account: Install Desktop File"
+          firejail_xdg_desktop_file:
+            dest: "/home/kmchan/.local/share/applications/steam.desktop"
+            src: "/usr/share/applications/steam.desktop"
+            parameters: "--profile=steam"
             owner: "kmchan"
             group: "kmchan"
-            mode: "{{ item.mode }}"
-          loop:
-            - { topic: "steam",  path: ".local/share/applications/steam.desktop", mode: "0644" }
-            - { topic: "steam",  path: ".config/firejail/steam.profile", mode: "0644" }
+            mode: "0644"
+
+        - name: "Applying Steam Settings to Account: Install Local Firejail Customizations"
+          template:
+            dest: "/home/kmchan/.config/firejail/steam.profile"
+            src: "{{ playbook_dir }}/files/home/kmchan/.config/firejail/steam.profile.j2"
+            owner: "kmchan"
+            group: "kmchan"
+            mode: "0644"
     
 
