Update Account Specific qBittorrent Settings
The commit setups qBittorrent for the account. It creates a new
desktop file to run the app inside firejail sandbox. It also
configure the firejail sandbox to block connection to local servers
as well as access to most of the home directory outside of download
directory.

--- a/account.yml
+++ b/account.yml
@@ -12,6 +12,7 @@
 - import_playbook: "account.golang.yml"
 - import_playbook: "account.mysql.yml"
 - import_playbook: "account.postgresql.yml"
+- import_playbook: "account.qbittorrent.yml"
 - import_playbook: "account.server.yml"
 - import_playbook: "account.skype.yml"
 - import_playbook: "account.steam.yml"
