--- a/software.firejail.yml
+++ b/software.firejail.yml
@@ -47,6 +47,7 @@
             - { path: "/etc/firejail/allow-connection-to-lan.inc" }
             - { path: "/etc/firejail/allow-connection-to-lan.net" }
             - { path: "/etc/firejail/allow-fcitx.inc" }
+            - { path: "/etc/firejail/allow-screensaver-inhibition.inc" }
             - { path: "/etc/firejail/isolate-networking-with-no-ip.inc" }
             - { path: "/etc/firejail/isolate-networking-with-random-ip.inc" }
             - { path: "/etc/network/interfaces.d/firejail" }
