Firejail Profile Update
This commit contains assortment of updates to firejail profiles.
For example, new include files are added to enable more dbus service
filtering. Then, existing include files are renamed or separated.
Lastly, profiles are added or updated to use the modified include
files.

--- a/install.firefox.yml
+++ b/install.firefox.yml
@@ -81,4 +81,12 @@
           warn: false
         loop: "{{ install_firefox_icons }}"
 
+      - name: "Install Desktop Software: Install Firejail Customizations"
+        template:
+          dest: "/etc/firejail/firefox.local"
+          src: "{{ playbook_dir }}/files/etc/firejail/firefox.local.j2"
+          owner: "root"
+          group: "root"
+          mode: "0644"
+
 
